# turbovec

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-npm.yml
docs/: api.md
docs/integrations/: langchain_js.md  llamaindex_ts.md
turbovec/: build.rs
turbovec-node/: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
turbovec-node/.husky/: pre-commit
turbovec-node/__test__/: filtering.test.ts  helpers.ts  id-map.test.ts  index.test.ts  langchain.test.ts  llamaindex.test.ts
turbovec-node/npm/darwin-arm64/: README.md  package.json
turbovec-node/npm/darwin-x64/: README.md  package.json
turbovec-node/npm/linux-arm64-gnu/: README.md  package.json
turbovec-node/npm/linux-x64-gnu/: README.md  package.json
turbovec-node/npm/win32-x64-msvc/: README.md  package.json
turbovec-node/src/: error.rs  id_map.rs  index.rs  lib.rs
turbovec-node/ts/: errors.ts  langchain.ts  llamaindex.ts
turbovec-python/: Cargo.toml
turbovec/src/: io.rs  lib.rs  search.rs
turbovec/tests/: io_versioning.rs
